# borealis

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .release-config.json  CHANGELOG.md  CMakeLists.txt  README.md  xmake.lua
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-please.yml  wasm-deploy.yml
android-project/: README.md  README_ZH.md
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/src/main/java/com/borealis/demo/: DemoActivity.java
android-project/app/src/main/java/org/libsdl/app/: BorealisHandler.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  PlatformUtils.java  SDL.java  SDLActivity.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSensorManager.java  SDLSurface.java
demo/src/: main.cpp
demo/src/tab/: settings_tab.cpp
resources/: .romfsignore
resources/i18n/en-US/: hints.json
resources/i18n/fr/: brls.json
resources/i18n/ru/: brls.json
resources/i18n/zh-Hans/: hints.json
resources/xml/activity/: main.xml
resources/xml/cells/: cell.xml
resources/xml/schema/: borealis.xsd  catalog.xml
resources/xml/tabs/: components.xml  layout.xml  recycling_list.xml  scroll_test.xml  settings.xml  text_test.xml  transform.xml
resources/xml/views/: captioned_image.xml  pokemon.xml
wasm/: shell.html
